Fixed a couple width and overflow issues. Last thing to add is stream info to info page

--- a/letterbox/src/Info.css
+++ b/letterbox/src/Info.css
@@ -56,9 +56,9 @@ table {
 .infoPage {
   color: white;
   display: grid;
-  min-width: 900px;
-  grid-template-rows: 75px 1fr;
+  min-width: 1200px;
 	overflow-x: hidden;
+  grid-template-rows: 75px 1fr;
   background: linear-gradient(#2c3440, rgb(21, 24, 28) 7%);
 }
 
